test/compile_error/invalid_parameter_location_test.exs
defmodule ApicalTest.CompileError.InvalidParameterLocationTest do
  use ExUnit.Case, async: true

  test "this"
end
